# printer-monitor

./: .gitignore  README.md  SPEC.md  angular.json  package-lock.json  package.json  test_spooler.ps1  tsconfig.json
.github/workflows/: build-windows.yml  release.yml
src/: index.html  styles.scss
src-tauri/: Cargo.toml  Entitlements.plist  base64_icon.txt  tauri.conf.json  tauri.debug.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/libs/: mac-arm.tgz  mac-x64.tgz
src-tauri/src/: api_server.rs  bluetooth.rs  escpos_print.rs  guards.rs  lib.rs  network.rs  printer_cache.rs  printers.rs  serial.rs  settings.rs  system.rs
src-tauri/src/strategy/: linux.rs  mac.rs  mod.rs  windows.rs
src/app/: app.config.ts  app.html  app.html.backup  app.spec.ts  app.ts  btn.component.ts  card.component.ts  ip-input.component.ts  models.ts  tauri.service.ts
src/app/core/: printers-resource.service.ts  system-resource.service.ts
src/app/home/: home.component.html  home.component.scss  home.component.ts  printers.service.ts  system.service.ts
src/app/services/: log.service.ts  pdf.service.ts  tauri.service.ts
src/app/tabs/bluetooth-tab/: bluetooth-tab.component.html  bluetooth-tab.component.scss  bluetooth-tab.component.ts  bluetooth.service.ts
src/app/tabs/dashboard/: dashboard-tab.component.html  dashboard-tab.component.scss  dashboard-tab.component.ts  system.service.ts
src/app/tabs/network/: network-config.component.ts  network-tab.component.html  network-tab.component.scss  network-tab.component.ts  network.service.ts
src/app/tabs/printers/: printers-tab.component.html  printers-tab.component.scss  printers-tab.component.ts  printers.service.ts
