[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
sysinfo = "0.33"
local-ip-address = "0.6"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
chrono = { version = "0.4", features = ["clock"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-single-instance = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
escpos = { version = "0.17.0", features = ["graphics"] }
base64 = "0.22"
tiny_http = "0.12"
pdfium-render = "0.8.37"
nusb = "0.1.14"
winapi = { version = "0.3.9", features = ["winspool", "errhandlingapi", "handleapi", "minwindef"] }
rusb = "0.9.4"
windows-sys = { version = "0.61.2", features = ["Win32_Devices_Communication", "Win32_Foundation", "Win32_System_IO", "Win32_Storage_FileSystem"] }
windows = { version = "0.61.3", features = ["Win32_Graphics_Gdi", "Win32_Foundation", "Win32_Graphics_Printing"] }
